# GraphAlgorithms

./: CMakeLists.txt
include/: DiaGraph.h  adjNode.h  graphEdge.h  tools.h  trasversal.h
src/demo/: CMakeLists.txt
src/demo/demo1/: demo1.cpp
src/demo/demo2/: demo2.cpp
src/lib/: CMakeLists.txt
src/lib/DiaGraph/: DiaGraph.cpp
src/lib/trasversal/: trasversal.cpp
